<resources>
    <string name="app_name">AstonProject</string>
    <string name="Characters">Characters</string>
    <string name="location">Location</string>
    <string name="episodes">Episodes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">photo</string>
    <string name="search">Search</string>
    <string name="filterButton">filterButton</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">unknown</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="species">Species:</string>
    <string name="save">Save</string>
    <string name="season_5">Season 5</string>
    <string name="season_4">Season 4</string>
    <string name="season_3">Season 3</string>
    <string name="season_2">Season 2</string>
    <string name="season_1">Season 1</string>
    <string name="season">Season:</string>
    <string name="type">Type:</string>
    <string name="cluster">Cluster</string>
    <string name="planet">Planet</string>
    <string name="dream">Dream</string>
    <string name="spaceStation">Space Station</string>
    <string name="dimension">Dimension</string>
    <string name="_dimension">Dimension:</string>
    <string name="game">Game</string>
    <string name="replacementDimension">Replacement Dimension</string>
    <string name="dimensionC137">Dimension C-137</string>
    <string name="episodes_title">Episodes:</string>
    <string name="error_text">Oops! There is no data, check your internet connection or filter settings.</string>
    <string name="learn_more">Learn more</string>
    <string name="notConnected">Oops, there seems to be no internet connection. Check your connection and try again.</string>
    <string name="error">error</string>
    <string name="retry">Retry</string>
    <string name="avatar">avatar</string>
    <string name="open_filter">Open Filter</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="human">Human</string>
    <string name="alien">Alien</string>
    <string name="humanoid">Humanoid</string>
    <string name="robot">Robot</string>
    <string name="mythological">Mythological</string>
    <string name="poopybutthole">Poopybutthole</string>
    <string name="animal">Animal</string>
    <string name="disease">Disease</string>
    <string name="species2">Species:</string>
    <string name="less">less</string>
</resources>